--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "author": "Adam Dobrawy",
   "license": "MIT",
@@ -14,6 +14,10 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "protocol-buffers": "^4.1.0",
-    "superagent": "^5.1.0"
+    "superagent": "^5.1.0",
+    "superagent-logger": "^1.1.0"
+  },
+  "devDependencies": {
+    "ava": "^2.2.0"
   }
 }
