--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava",
+    "lint": "eslint ."
   },
   "author": "Adam Dobrawy",
   "license": "MIT",
@@ -18,6 +19,8 @@
     "superagent-logger": "^1.1.0"
   },
   "devDependencies": {
-    "ava": "^2.2.0"
+    "@hyperone/eslint-config": "^2.0.0",
+    "ava": "^2.2.0",
+    "eslint": "^6.1.0"
   }
 }
