--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
-image: node:latest
-
-cache:
-  paths:
-    - node_modules/
-
-test:
+test:node:
+  image: node:latest
+  cache:
+    paths:
+      - node_modules/
   script:
     - npm install
     - npm run lint
     - npm run test
+
+
+test:docker:
+  image: docker:18
+  script:
+    - make all
