--- a/config.json
+++ b/config.json
@@ -2,9 +2,7 @@
   "description": "HyperOne Journal logging plugin for Docker",
   "documentation": "https://github.com/hyperonecom/h1-docker-logging-plugin",
   "entrypoint": [
-    "sh",
-    "-c",
-    "node /src/index.js &> logi.txt"
+    "node", "/src/index.js"
   ],
   "workdir": "/src",
   "interface": {
