--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "Adam Dobrawy",
   "license": "MIT",
   "dependencies": {
+    "dayjs": "^1.8.15",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "protocol-buffers": "^4.1.0",
+    "qs": "^6.8.0",
     "superagent": "^5.1.0",
-    "superagent-logger": "^1.1.0"
+    "superagent-logger": "^1.1.0",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "@hyperone/eslint-config": "^2.0.0",
