--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Adam Dobrawy",
   "license": "MIT",
   "dependencies": {
+    "co-body": "^6.0.0",
     "dayjs": "^1.8.15",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
