--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ services:
   - docker
 
 script: make node package enable integration
-
 before_deploy:
 - echo "$DOCKER_PASSWORD" | docker login "$DOCKER_REGISTRY" -u "$DOCKER_USERNAME" --password-stdin;
 
@@ -13,3 +12,9 @@ deploy:
   script: make push
   on:
     branch: master
+
+jobs:
+  include:
+    - stage: verify installation
+      install: skip
+      script: make pull
