Make integration tests after pull too

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
           branch: master
     - stage: verify
       install: skip
-      script: make pull
+      script: make pull integration
 
 stages:
   - test
