--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "@hyperone/eslint-config": "^2.0.1",
     "ava": "^3.5.1",
     "eslint": "^6.8.0"
-  }
+  },
+  "eslintIgnore": ["rootfs"]
 }
